# jupiter

./: .gitignore  README.md  install.sh  product.md  pyproject.toml  requirements.txt
jupiter/: __init__.py  config.py  prompt.py
jupiter/agent/: __init__.py  daemon.py  planner.py
jupiter/api/: __init__.py  main.py
jupiter/cli/: main.py
jupiter/safety/: __init__.py  broker.py
jupiter/storage/: __init__.py  audit.py  memory.py
jupiter/tools/: __init__.py  system.py  terminal.py
provisioning/: __init__.py  hardware_detect.py  model_policy.py
scripts/: firstboot.sh
systemd/: jupiter-agent.service  jupiter-firstboot.service
