[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jupiter-os"
version = "0.1.0"
description = "Jupiter OS — Local Agentic Desktop Copilot (Phase 1)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.25.0",
    "click>=8.1.0",
]

[project.scripts]
jupiter = "jupiter.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["jupiter*"]
